EKS/application_deploymentfiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-2048
  namespace: game-2048
spec:
  replicas: 3
  selector:
    matchLabels:
      name: app-2048
  template:
    metadata:
      labels:
       name: app-2048 
    spec:        
     containers:
     - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
       imagePullPolicy: Always
       name: app-2048
       ports:
        - containerPort: 80
