EKS/application_deploymentfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048service
  namespace: game-2048
spec:
  type: NodePort
  ports:
   - targetPort: 80
     port: 80
     protocol: TCP
  selector:
    name: app-2048
