EKS/application_deploymentfiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: game-2048ingress
   namespace: game-2048
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
spec:
   ingressClassName: alb
   rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service: 
           name: game-2048service   
           port:
             number: 80
